--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
 <script type="text/javascript" src="src/vendor/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="src/vendor/angular-route/angular-route.min.js"></script>
 <script src="src/vendor/ngstorage/ngStorage.min.js"></script>
+<!-- endbuild -->
 
 <!-- build:js assets/js/main.js -->
 <script type="text/javascript" src="src/js/app.js"></script>
